# string-algorithms

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: bm.c  bm.h  fep.c  kmp.c  kmp.h  rk.c  rk.h  shift.c  trivial.c  trivial.h
src/algorithms/: bm.c  bm.h  kmp.c  rk.c  shift.c  shift.h  trivial_mem.c  trivial_mem.h
tests/: min_unit.h  test_main.c
